notification service & controller