@@ -4,6 +4,7 @@ import com.tpa.dto.response.auth.NotificationResponse;
 import com.tpa.entity.Notification;
 import com.tpa.entity.User;
 import com.tpa.enums.UserRole;
+import com.tpa.exception.NoResourceFoundException;
 import com.tpa.repository.NotificationRepository;
 import com.tpa.repository.UserRepository;
 import com.tpa.service.NotificationService;
@@ -14,7 +15,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -22,19 +22,25 @@ import java.util.stream.Collectors;
 public class NotificationServiceImpl implements NotificationService {
 
     private final NotificationRepository notificationRepository;
+
     private final UserRepository userRepository;
 
-    private NotificationResponse notificationResponse(Notification n) {
+    private User getUser(String username) {
+        return userRepository.findByEmail(username).orElseThrow(() -> new NoResourceFoundException("User not found"));
+    }
+
+    private NotificationResponse mapToResponse(Notification notification) {
         return NotificationResponse.builder()
-                .id(n.getId())
-                .title(n.getTitle())
-                .message(n.getMessage())
-                .read(n.isRead())
-                .createdAt(n.getCreatedAt())
-                .targetUrl(n.getTargetUrl())
+                .id(notification.getId())
+                .title(notification.getTitle())
+                .message(notification.getMessage())
+                .read(notification.isRead())
+                .createdAt(notification.getCreatedAt())
+                .targetUrl(notification.getTargetUrl())
                 .build();
     }
 
+    @Override
     @Transactional
     public void createNotification(User user, String title, String message, String targetUrl) {
         Notification notification = Notification.builder()
@@ -42,50 +48,76 @@ public class NotificationServiceImpl implements NotificationService {
                 .title(title)
                 .message(message)
                 .targetUrl(targetUrl)
+                .isRead(false)
                 .build();
 
         notificationRepository.save(notification);
-        log.info("Notification saved for user {}: {}", user.getEmail(), title);
+        log.info("Notification created for user {}", user.getEmail());
     }
 
+    @Override
     @Async("executor")
     @Transactional
     public void notifyAllAdmins(String title, String message, String targetUrl) {
+
         List<User> admins = userRepository.findAll()
                 .stream()
-                .filter(u -> UserRole.ADMIN.equals(u.getUserRole()))
-                .collect(Collectors.toList());
+                .filter(user -> UserRole.ADMIN.equals(user.getUserRole()))
+                .toList();
 
         admins.forEach(admin -> createNotification(admin, title, message, targetUrl));
-        log.info("Admin notification queued for {} admins: {}", admins.size(), title);
+        log.info("Notification sent to {} admins", admins.size());
     }
 
-    public List<NotificationResponse> getUserNotifications(Long userId) {
-        return notificationRepository.findByUserIdOrderByCreatedAtDesc(userId)
+    @Override
+    @Transactional(readOnly = true)
+    public List<NotificationResponse> getUserNotifications(String username) {
+        User user = getUser(username);
+
+        return notificationRepository
+                .findByUserIdOrderByCreatedAtDesc(user.getId())
                 .stream()
-                .map(this::notificationResponse)
-                .collect(Collectors.toList());
+                .map(this::mapToResponse)
+                .toList();
     }
 
-    public long countUnread(Long userId) {
-        return notificationRepository.findByUserIdOrderByCreatedAtDesc(userId)
+    @Override
+    @Transactional(readOnly = true)
+    public long countUnread(String username) {
+        User user = getUser(username);
+
+        return notificationRepository
+                .findByUserIdOrderByCreatedAtDesc(user.getId())
                 .stream()
-                .filter(n -> !n.isRead())
+                .filter(notification -> !notification.isRead())
                 .count();
     }
 
+    @Override
     @Transactional
-    public void markAllAsRead(Long userId) {
-        notificationRepository.markAllAsReadByUserId(userId);
+    public void markAllAsRead(String username) {
+        User user = getUser(username);
+
+        notificationRepository.markAllAsReadByUserId(user.getId());
+        log.info("All notifications marked as read for {}", username);
     }
 
+    @Override
     @Transactional
-    public void markOneAsRead(Long notificationId, Long userId) {
-        notificationRepository.findById(notificationId).ifPresent(n -> {
-            if (n.getUser().getId().equals(userId)) {
-                n.setRead(true);
-                notificationRepository.save(n);
-            }
-        });
+    public void markOneAsRead(Long notificationId, String username) {
+        User user = getUser(username);
+
+        Notification notification = notificationRepository
+                .findById(notificationId)
+                .orElseThrow(() -> new NoResourceFoundException("Notification not found"));
+
+        if (!notification.getUser().getId().equals(user.getId())) {
+            throw new RuntimeException("You are not authorized to access this notification");
+        }
+
+        notification.setRead(true);
+
+        notificationRepository.save(notification);
+        log.info("Notification {} marked as read", notificationId);
     }
 }
